[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Bar/prog.png" type="Texture" id=1]
[ext_resource path="res://Assets/Bar/bg.png" type="Texture" id=2]
[ext_resource path="res://Assets/Bar/fg.png" type="Texture" id=3]
[ext_resource path="res://Assets/Bar/marker.png" type="Texture" id=4]
[ext_resource path="res://Scripts/HealthAnchor.gd" type="Script" id=5]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=6]
[ext_resource path="res://Assets/Bar/prog_dmg.png" type="Texture" id=7]
[ext_resource path="res://Scripts/Orange.gd" type="Script" id=8]
[ext_resource path="res://Assets/Fonts/AndadaPro-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Scripts/OrangeBoss.gd" type="Script" id=10]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float grey_strength = 0;
uniform float whiteness = 1;

void fragment() {
	
	vec4 color = texture(SCREEN_TEXTURE, SCREEN_UV);
	float grey = (color.r * 0.299) + (color.g * 0.587) + (color.b * 0.114);
	
	vec3 resCol = color.rgb * (1. - grey_strength) + grey * grey_strength;
	resCol *= whiteness;
	
	COLOR = vec4(resCol, color.a);
	
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/grey_strength = 0.0
shader_param/whiteness = 1.0

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 9 )

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("Node/MarginContainer/ColorRect:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.233, 1 ),
"update": 0,
"values": [ Vector2( 1024, 0 ), Vector2( 1024, 40 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node/MarginContainer2/ColorRect:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.233, 1 ),
"update": 0,
"values": [ Vector2( 1024, 0 ), Vector2( 1024, 40 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Node/MarginContainer2/ColorRect:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, -1 ) ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/VBoxContainer/MarginContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1.86606, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ViewportContainer:material:shader_param/grey_strength")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.329877, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ViewportContainer:material:shader_param/whiteness")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.9 ),
"transitions": PoolRealArray( 3.03143, 1.6245, 1 ),
"update": 0,
"values": [ 1.0, 1.0, 0.3 ]
}

[sub_resource type="Animation" id=6]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/VBoxContainer/MarginContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node/MarginContainer/ColorRect:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1024, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Node/MarginContainer2/ColorRect:rect_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1024, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ViewportContainer:material:shader_param/grey_strength")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ViewportContainer:material:shader_param/whiteness")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
size_override_stretch = true
transparent_bg = true
handle_input_locally = false
hdr = false
render_target_update_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 35.0
margin_top = 35.0
margin_right = -35.0
margin_bottom = -35.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Node2D" type="Node2D" parent="VBoxContainer/HBoxContainer"]
scale = Vector2( 0.1, 0.1 )

[node name="TextureProgress" type="TextureProgress" parent="VBoxContainer/HBoxContainer/Node2D"]
margin_right = 1800.0
margin_bottom = 225.0
value = 90.0
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthAnchor" type="Sprite" parent="VBoxContainer/HBoxContainer/Node2D/TextureProgress"]
position = Vector2( 4.28253, 0 )
texture = ExtResource( 4 )
centered = false
script = ExtResource( 5 )

[node name="BG" type="TextureProgress" parent="VBoxContainer/HBoxContainer/Node2D/TextureProgress"]
show_behind_parent = true
margin_right = 40.0
margin_bottom = 40.0
texture_under = ExtResource( 2 )

[node name="Orange" type="TextureProgress" parent="VBoxContainer/HBoxContainer/Node2D/TextureProgress"]
show_behind_parent = true
margin_right = 1798.0
margin_bottom = 225.0
value = 100.0
texture_progress = ExtResource( 7 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 4.0
margin_right = 954.0
margin_bottom = 530.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BossContainer" type="MarginContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 261.0
margin_right = 954.0
margin_bottom = 261.0
size_flags_vertical = 10

[node name="Node2D" type="Node2D" parent="VBoxContainer/VBoxContainer/BossContainer"]
scale = Vector2( 0.5, 0.1 )

[node name="TextureProgress" type="TextureProgress" parent="VBoxContainer/VBoxContainer/BossContainer/Node2D"]
visible = false
margin_top = 1700.0
margin_right = 40.0
margin_bottom = 40.0
value = 100.0
texture_progress = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OrangeBoss" type="TextureProgress" parent="VBoxContainer/VBoxContainer/BossContainer/Node2D/TextureProgress"]
show_behind_parent = true
margin_right = 40.0
margin_bottom = 40.0
value = 100.0
texture_progress = ExtResource( 7 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="VBoxContainer/VBoxContainer/BossContainer/Node2D/TextureProgress/OrangeBoss"]

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 478.0
margin_right = 954.0
margin_bottom = 526.0
size_flags_horizontal = 3
size_flags_vertical = 10

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/VBoxContainer/MarginContainer"]
margin_right = 954.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 0.862745 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/MarginContainer"]
margin_left = 376.0
margin_right = 577.0
margin_bottom = 48.0
size_flags_horizontal = 4
size_flags_vertical = 2
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.67451, 0, 0.00784314, 1 )
text = "YOU DIED"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Cutscene = SubResource( 4 )
anims/Death = SubResource( 5 )
anims/Idle = SubResource( 6 )

[node name="Node" type="Node" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="Node"]
anchor_right = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Node/MarginContainer"]
margin_right = 1024.0
color = Color( 0, 0, 0, 1 )

[node name="MarginContainer2" type="MarginContainer" parent="Node"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Node/MarginContainer2"]
margin_right = 1024.0
grow_horizontal = 0
grow_vertical = 0
color = Color( 0, 0, 0, 1 )

[connection signal="boss_health_changed" from="." to="VBoxContainer/VBoxContainer/BossContainer/Node2D/TextureProgress/OrangeBoss" method="_on_HUD_boss_health_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/Node2D/TextureProgress/Orange" to="VBoxContainer/HBoxContainer/Node2D/TextureProgress/HealthAnchor" method="_on_Orange_value_changed"]
[connection signal="timeout" from="VBoxContainer/VBoxContainer/BossContainer/Node2D/TextureProgress/OrangeBoss/Timer" to="VBoxContainer/VBoxContainer/BossContainer/Node2D/TextureProgress/OrangeBoss" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="VBoxContainer/HBoxContainer/Node2D/TextureProgress/Orange" method="_on_Timer_timeout"]
