[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=2]
[ext_resource path="res://Prefabs/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Prefabs/Player.tscn" type="PackedScene" id=4]

[node name="PlayerAndHUD" type="Node"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="CanvasLayer" instance=ExtResource( 3 )]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Player" type="KinematicBody" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 160.401, -99.5284, -15.3855 )
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="Player"]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 20, 20 )
current = true
fov = 60.0
size = 30.0
near = 0.01

[connection signal="cutscene" from="Player" to="CanvasLayer/HUD" method="_on_Player_cutscene"]
[connection signal="health_changed" from="Player" to="CanvasLayer/HUD" method="_on_Player_health_changed"]
